Implemented read sessions REST API endpoint
Test Runner
- renamed configuration parameter enable_results_import to enable_import_results
- added configuration parameter enable_read_sessions
- disabling read sessions endpoint when setting enable_read_sessions
  parameter
- added date_created data field to sessions

REST API
- added read sessions REST API endpoint
- implemented REST API tests for read sessions
- added related links to read sessions endpoint
- implemented expand functionality to read sessions endpoint
- using HAL format in read sessions endpoint

Documentation
- added documentation for read sessions REST API endpoint

--- a/tools/wave/config.default.json
+++ b/tools/wave/config.default.json
@@ -37,9 +37,10 @@
       "automatic": 60000,
       "manual": 300000
     },
-    "enable_results_import": false,
+    "enable_import_results": false,
     "web_root": "/_wave",
     "persisting_interval": 20,
-    "api_titles": []
+    "api_titles": [],
+    "enable_read_sessions": false
   }
 }
