Improved reliability of http polling event system
Test Runner
- increased major version number
- reading cache duration from configuration
- caching events
- deleting expired events

REST API
- always returning events as array
- added 'last_event' query parameter to get event diff if available
- removed device api postman tests

Documentation
- updated documentation for changed listen session events endpoint
  to always return events as array and include new query parameter
  last_event

--- a/tools/wave/config.default.json
+++ b/tools/wave/config.default.json
@@ -41,6 +41,7 @@
     "web_root": "/_wave",
     "persisting_interval": 20,
     "api_titles": [],
-    "enable_read_sessions": false
+    "enable_read_sessions": false,
+    "event_cache_duration": 60000
   }
 }
